fix: 修复已确认问题并补充 GameTest